--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "A vanilla JavaScript portfolio website",
   "type": "module",
   "main": "server.js",
+  "homepage": "https://juanluther.github.io/portfolio-vanilla",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "download-images": "node download-images.js"
+    "download-images": "node download-images.js",
+    "build": "node build.js",
+    "deploy": "node deploy.js"
   },
   "dependencies": {
     "express": "^4.18.2",
